<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/send_to_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_send_to"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:hint="@string/send_to_field"
        android:inputType="textWebEmailAddress" />

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
        android:text="@string/title_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:hint="@string/title_field"
        android:inputType="textCapSentences" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/message_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:hint="@string/message_field"
        android:inputType="text" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_send"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_send" />

    </RelativeLayout>
</LinearLayout>